fixed new card button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     >
                         Start Game
                     </button>
-                    <button type="button" class="cardBtn" onclick="newCard()">New card</button>
+                    <button type="button" class="cardBtn" onclick="newCard()">
+                        New card
+                    </button>
                 </div>
                 <p class="result"></p>
             </div>
